--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         </title>
     <head>
     <body>
-        <!--Add the following script at the bottom of the web page (before </body></html>)-->
-<script type="text/javascript">function add_chatinline(){var hccid=49435908;var nt=document.createElement("script");nt.async=true;nt.src="https://mylivechat.com/chatinline.aspx?hccid="+hccid;var ct=document.getElementsByTagName("script")[0];ct.parentNode.insertBefore(nt,ct);}
-add_chatinline();</script>
+        <!-- Fibotalk Script start --> 
+    <script type='text/javascript'>!function(t,e,a,c,r,n){t._ft_=t._ft_||{},t._ft_.rcl="69066090ebe13e9dabe47470";var s=e.createElement('script');s.src='https://cdn.fibotalk.com/widget.js',s.async=1,s.type='text/javascript';var f=e.getElementsByTagName('script')[0];f.parentNode.insertBefore(s,f)}(window,document);</script><div id='__fibotalk_powered__' style='display: none'>Live chat provided by <a href='https://www.fibotalk.com' target='_blank'>Fibotalk</a></div>
+    <!-- Fibotalk Script ends -->
     </body>
 </html>
